--- a/.tekton/task-git-clone.yaml
+++ b/.tekton/task-git-clone.yaml
@@ -3,18 +3,24 @@ kind: Task
 metadata:
   name: clone-repo-task
 spec:
-  inputs:
-    params:
-      - name: task-pvc
-        description: the output pvc - this is the name of the PVC that is mounted for the execution of the task
-      - name: repository
-        description: the git repo
-      - name: branch
-        description: the branch for the git repo
-        default: master
-      - name: continuous-delivery-context-secret
-        description: name of the configmap containing the continuous delivery pipeline context secrets
-        default: cd-secret        
+   params:
+     - name: task-pvc
+       description: the output pvc - this is the name of the PVC that is mounted for the execution of the task
+     - name: repository
+       description: the git repo
+     - name: branch
+       description: the branch for the git repo
+       default: master
+     - name: continuous-delivery-context-secret
+       description: name of the configmap containing the continuous delivery pipeline context secrets
+       default: cd-secret
+  stepTemplate:
+    env:
+      - name: GIT_TOKEN
+        valueFrom:
+          secretKeyRef:
+            name: $(params.continuous-delivery-context-secret)
+            key: GIT_TOKEN            
   steps:
     - name: git-clone
       image: icr.io/continuous-delivery/pipeline/tekton/alpine-git:latest
