--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -10,8 +10,10 @@ spec:
       description: the git repo
     - name: branch
       description: the branch for the git repo
-#    - name: apikey
-#      description: the ibmcloud api key
+    - name: apikey
+      description: the ibmcloud api key
+    - name: region
+      description: Region of the App Configuration instance
 #    - name: registryNamespace
 #      description: the ibmcloud registry namespace
 #    - name: cluster
@@ -25,19 +27,25 @@ spec:
 #    - name: clusterNamespace
 #      description: The Kubernetes cluster namespace
 #      default: prod                  
-#    - name: guid
-#      description: Id of the App Configuration instance
-#    - name: collection_id
-#      description: name of the App Configuration collection
+    - name: guid
+      description: Id of the App Configuration instance
+    - name: collection_id
+      description: name of the App Configuration collection
   tasks:
-    - name: clone-repository
+    - name: ac-sync
       taskRef: 
-        name: clone-repo-task
+        name: ac-sync-task
       params:
         - name: repository
           value: $(params.repository)
         - name: branch
           value: $(params.branch)
+        - name: apikey
+          value: $(params.apikey)
+        - name: guid
+          value: $(params.guid)
+        - name: region
+          value: $(params.region)
         - name: task-pvc
           value: $(params.pipeline-pvc)
 #      resources:      
