--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -75,7 +75,7 @@ spec:
       command: ["/bin/sh", "-c"]
       args:
         - |
-          set -e -o pipefail
+#          set -e -o pipefail
           ls -la
           
 #          if [ ! -f ./config/production.json ]; then
