--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -75,8 +75,8 @@ spec:
       command: ["/bin/sh", "-c"]
       args:
         - |
-#          set -e -o pipefail
           ls -la
+          pwd
           
 #          if [ ! -f ./config/production.json ]; then
 #             touch ./config/production.json
