--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -22,6 +22,10 @@ spec:
     - name: continuous-delivery-context-secret
       description: name of the configmap containing the continuous delivery pipeline context secrets
       default: cd-secret
+  resources:
+    outputs:
+      - name: builtImage
+        type: image      
   stepTemplate:
     env:
       - name: GIT_TOKEN
@@ -78,7 +82,7 @@ spec:
           ls -la
           pwd
           # to do - change this 
-          cd toolchain-sample
+          cd ./toolchain-sample
           if [ $REGION = "eu-gb" ]; then
             baseUrl = "https://eu-gb.apprapp.cloud.ibm.com/apprapp/feature/v1/instances"
           else 
