--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -78,6 +78,7 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - |
+          set -e -o pipefail;
           ls -la
           pwd
           # to do - change this 
