--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -48,8 +48,8 @@ spec:
         - |
           #set -e -o pipefail;
           echo "Cloning $REPOSITORY";
+          git clone -b $BRANCH $REPOSITORY
           git branch acsync $BRANCH
-          git clone -b acsync $REPOSITORY
           ls -la
           pwd
       volumeMounts:
@@ -82,6 +82,7 @@ spec:
           set -e -o pipefail;
           ls -la
           pwd
+          git branch
           # to do - change this 
           cd ./toolchain-sample
           if [ "$REGION" = "eu-gb" ]; then
