--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -49,8 +49,7 @@ spec:
           #set -e -o pipefail;
           echo "Cloning $REPOSITORY";
           git clone -b $BRANCH $REPOSITORY
-          
-          #git branch acsync $BRANCH
+          git branch acsync $BRANCH
           ls -la
           pwd
       volumeMounts:
@@ -81,11 +80,10 @@ spec:
       args:
         - |
           set -e -o pipefail;
-          ls -la
-          pwd
-
           # to do - change this 
-          cd ./toolchain-sample
+          cd toolchain-sample
+          pwd
+          ls -la 
           git branch          
           if [ "$REGION" = "eu-gb" ]; then
             baseUrl="https://eu-gb.apprapp.cloud.ibm.com/apprapp/feature/v1/instances/"
