--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -104,10 +104,12 @@ spec:
           else 
              echo "changes ---- "
              #git config -l
-             git add .
-             echo "------13"             
-             git commit -m "sync with app configuration"
-             git push origin
+             git config --global user.name jojustin
+             git config -l
+             #git add .
+             #echo "------13"             
+             #git commit -m "sync with app configuration"
+             #git push origin
              #git request-pull https://github.com/jojustin/toolchain-sample main
           fi
       volumeMounts:
