--- a/.tekton/pipeline.yaml
+++ b/.tekton/pipeline.yaml
@@ -12,8 +12,15 @@ spec:
       description: the branch for the git repo
     - name: apikey
       description: the ibmcloud api key
-    - name: region
+    - name: resourceGroup
       description: Region of the App Configuration instance
+    - name: imageUrl
+      description: url of the built image
+#    - name: region
+#      description: Region of the App Configuration instance
+#    - name: region
+#      description: Region of the App Configuration instance
+
 #    - name: registryNamespace
 #      description: the ibmcloud registry namespace
 #    - name: cluster
@@ -40,6 +47,10 @@ spec:
           value: $(params.repository)
         - name: branch
           value: $(params.branch)
+        - name: resourceGroup
+          value: $(params.resourceGroup)
+        - name: imageUrl
+          value: $(params.imageUrl)
         - name: apikey
           value: $(params.apikey)
         - name: guid
