--- a/.tekton/task-ac-sync.yaml
+++ b/.tekton/task-ac-sync.yaml
@@ -126,8 +126,6 @@ spec:
       image: ibmcom/pipeline-base-image
       workingDir: /artifacts
       env:
-        - name: APIKEY
-          value: $(params.apikey)
         - name: REGION
           value: $(params.region)
         - name: IMAGEURL
@@ -138,6 +136,11 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.annotations['devops.cloud.ibm.com/build-number']             
+        - name: API_KEY 
+          valueFrom:
+            secretKeyRef:
+              name: $(params.continuous-delivery-context-secret)
+              key: API_KEY        
         - name: GIT_TOKEN
           valueFrom:
             secretKeyRef:
@@ -149,7 +152,8 @@ spec:
           set -x -o pipefail;
           BUILT_IMAGE="$IMAGEURL:$BUILD_NUMBER"
           echo "built image $BUILT_IMAGE"
-          
+          cd toolchain-sample
+          ls -la
           echo "Beginning of config json display"
           cat ./feature.json
           echo "End of config json display"
